# https://peps.python.org/pep-0517/
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# https://peps.python.org/pep-0621/
[project]
name = "package_rl"
description = "demo package"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "BSD 3-Clause License" }
authors = [
    { email = "rjlopez2@gmail.com", name = "Ruben Lopez" },
]
dynamic = ["version"]
dependencies = []

[tool.hatch.version]
path = "src/package_rl/__init__.py"

[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = ["src"]

# extras
# https://peps.python.org/pep-0621/#dependencies-optional-dependencies
[project.optional-dependencies]
test = ["pytest>=6.0"]

[project.urls]
homepage = "https://github.com/rjlopez2/package_rl"
repository = "https://github.com/rjlopez2/package_rl"
